--- a/commonlibrary/src/main/res/values/dimens.xml
+++ b/commonlibrary/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="loading_point_width">60dp</dimen>
     <dimen name="loading_point_height">50dp</dimen>
     <dimen name="d_loading_point_radius">3dp</dimen>
+    <dimen name="d_48">48dp</dimen>
 </resources>
