--- a/main.construction.cn/src/main/res/layout/appmain_fg_home.xml
+++ b/main.construction.cn/src/main/res/layout/appmain_fg_home.xml
@@ -1,11 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <TextView
+    <com.flyco.tablayout.SlidingTabLayout
+        android:id="@+id/stb"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/d_48"
+        android:background="@color/c_d9d6fc"
+        android:paddingLeft="5dp"
+        android:paddingRight="@dimen/d_48"
+        app:tl_textUnselectColor="@color/colorAccent"
+        app:tl_textSelectColor="@color/c_fff"
+        app:tl_indicator_color="@color/c_4239ae"
+        app:tl_indicator_corner_radius="5dp"
+        app:tl_indicator_margin_left="2dp"
+        app:tl_indicator_margin_right="2dp"
+        app:tl_indicator_style="BLOCK"/>
+
+    <ImageView
+        android:id="@+id/id_iv_add_channel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="测试"/>
-</LinearLayout>
+        android:layout_height="@dimen/d_48"
+        android:paddingRight="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:paddingLeft="10dp"
+        android:src="@mipmap/ic_add"
+        />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/stb"/>
+
+</RelativeLayout>
